ViTables ChangeLog
==================
** Jan 02, 2009**
	Code style of the h5db and docBrowser subpackages has been improved.

	Code style of the preferences, nodes and nodeProperties subpackages has been improved.

	Code style of the vtWidgets and vtTables subpackages has been improved.

** Jan 01, 2009**
	PyQt4 imports changed to remove unnecessary code verbosity.

** Dec 27, 2008**
	Fixed bug 014953.

	Strings are managed via unicode strings with utf-8 encoding.

** Dec 22, 2008**
	The User's Guide has been updated.

	Every str() call as been replaced by a unicode() call.

** Dec 19, 2008**
	Fixed a couple of minor problems.

	Fixed a bug that made impossible to open files by drag and drop in
	Windows.

	Fixed a bug introduced in the previous commit.

	The node copy/cut/paste mechanism has changed. Now it is much more efficient
	and simpler.

** Dec 18, 2008**
	The Copy Node operation  has been greatly optimized.

	Fixed an encoding related problem in the file opening procedure.

	Fixed a minor issue with the vertical header of large tables.

	The procedure for creating a Windows installer has been changed in order
	to deal properly with PyQt4.

** Dec 16, 2008**
	Fixed some bugs regarding portability between different platforms

** Dec 15, 2008**
	Fixed a problem in setup.py.

	Applied several simplifications derived from the use of Qt resources system.

	Fixed some bugs regarding portability between different platforms.

** Dec 13, 2008**
	Project clean-up and final changes.

** Dec 12, 2008**
	The preferences package has been refactored.

** Dec 11, 2008**
	Zooming cells with string content has been fixed.

	Fixed an annoying bug introduced in changeset 184e748db458.

** Dec 10, 2008**
	A context menu has been added to the workspace.

	The User's Manual has been updated.

	The documentation browser has been updated.

	The module in charge of application configuration has been updated.

	Fixed a small bug in the Properties dialog.
